--- a/index.html
+++ b/index.html
@@ -1,8 +1,33 @@
 <!DOCTYPE html>
-<html>
-   <body style="background-color:rgb(212, 240, 234);">
-      <h1>Welcome to Stack Simplify - Azure DevOps App1 - V1</h1>
-      <h2>Azure DevOps Demo App1</h2>
-      <h2>Application Version: V1</h2>
-   </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Static Webpage</title>
+    <style>
+        body {
+            background-color: green;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            color: white;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        h1 {
+            font-size: 2em;
+        }
+    </style>
+</head>
+<body>
+    <h1>Welcome to DecSecOps Hackathon - TEAM13 - Week 1</h1>
+    <h1>Team members</h1>    
+    <p>Jagadesh Selvaraj</p>
+    <p>Arun Subramaniyan</p>
+    <p>Uma Lekshmanan</p>
+</body>
 </html>
